fix(dropdown-menu): scrollbar only shows in x-axis and when necessary

--- a/src/components/dropdown-menu/DropdownMenu.scss
+++ b/src/components/dropdown-menu/DropdownMenu.scss
@@ -36,7 +36,7 @@
         .aria-menu:not(.submenu) {
             height: 100%;
             margin-top: $bdl-header-height;
-            overflow: scroll;
+            overflow-x: auto;
             background-color: $bdl-gray-02;
             border: none;
             border-radius: 0;
